// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag[Base] should render correctly  1`] = `
<div>
  <div
    class="c-sk3g7q soui-tag-tag c-30zghb soui-tag-default cm2h1t6 soui-tag-bright"
  >
    <span
      class="c-26sp25 soui-tag-wrapper"
    >
      Default
    </span>
  </div>
  <div
    class="c-sk3g7q soui-tag-tag c-wxt23m soui-tag-info cm2h1t6 soui-tag-bright"
  >
    <span
      class="c-26sp25 soui-tag-wrapper"
    >
      Info
    </span>
  </div>
  <div
    class="c-sk3g7q soui-tag-tag cmrazdf soui-tag-danger cm2h1t6 soui-tag-bright"
  >
    <span
      class="c-26sp25 soui-tag-wrapper"
    >
      Danger
    </span>
  </div>
  <div
    class="c-sk3g7q soui-tag-tag c-9z96ms soui-tag-warning cm2h1t6 soui-tag-bright"
  >
    <span
      class="c-26sp25 soui-tag-wrapper"
    >
      Warning
    </span>
  </div>
  <div
    class="c-sk3g7q soui-tag-tag cbkq5qr soui-tag-success cm2h1t6 soui-tag-bright"
  >
    <span
      class="c-26sp25 soui-tag-wrapper"
    >
      Success
    </span>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about color 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-sk3g7q soui-tag-tag cqncf3x soui-tag-tangerine cm2h1t6 soui-tag-bright"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-ev7ah3 soui-tag-magenta cm2h1t6 soui-tag-bright"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag csqx2r0 soui-tag-purple cm2h1t6 soui-tag-bright"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag cpbi2pu soui-tag-indigo cm2h1t6 soui-tag-bright"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-wxwnzh soui-tag-cyan cm2h1t6 soui-tag-bright"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-wxq1mi soui-tag-neon cm2h1t6 soui-tag-bright"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-qmy9a5 soui-tag-lemon cm2h1t6 soui-tag-bright"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-qs7upm soui-tag-brown cm2h1t6 soui-tag-bright"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-sk3g7q soui-tag-tag cqncf3x soui-tag-tangerine c-wxv2ml soui-tag-fill"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-ev7ah3 soui-tag-magenta c-wxv2ml soui-tag-fill"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag csqx2r0 soui-tag-purple c-wxv2ml soui-tag-fill"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag cpbi2pu soui-tag-indigo c-wxv2ml soui-tag-fill"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-wxwnzh soui-tag-cyan c-wxv2ml soui-tag-fill"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-wxq1mi soui-tag-neon c-wxv2ml soui-tag-fill"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-qmy9a5 soui-tag-lemon c-wxv2ml soui-tag-fill"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-qs7upm soui-tag-brown c-wxv2ml soui-tag-fill"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-sk3g7q soui-tag-tag cqncf3x soui-tag-tangerine co5remq soui-tag-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-ev7ah3 soui-tag-magenta co5remq soui-tag-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag csqx2r0 soui-tag-purple co5remq soui-tag-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag cpbi2pu soui-tag-indigo co5remq soui-tag-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-wxwnzh soui-tag-cyan co5remq soui-tag-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-wxq1mi soui-tag-neon co5remq soui-tag-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-qmy9a5 soui-tag-lemon co5remq soui-tag-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-qs7upm soui-tag-brown co5remq soui-tag-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-sk3g7q soui-tag-tag cqncf3x soui-tag-tangerine c-5m2miw soui-tag-bright-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-ev7ah3 soui-tag-magenta c-5m2miw soui-tag-bright-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag csqx2r0 soui-tag-purple c-5m2miw soui-tag-bright-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag cpbi2pu soui-tag-indigo c-5m2miw soui-tag-bright-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-wxwnzh soui-tag-cyan c-5m2miw soui-tag-bright-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-wxq1mi soui-tag-neon c-5m2miw soui-tag-bright-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-qmy9a5 soui-tag-lemon c-5m2miw soui-tag-bright-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-qs7upm soui-tag-brown c-5m2miw soui-tag-bright-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about mode 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-sk3g7q soui-tag-tag c-30zghb soui-tag-default cm2h1t6 soui-tag-bright"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-wxt23m soui-tag-info cm2h1t6 soui-tag-bright"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag cmrazdf soui-tag-danger cm2h1t6 soui-tag-bright"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-9z96ms soui-tag-warning cm2h1t6 soui-tag-bright"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag cbkq5qr soui-tag-success cm2h1t6 soui-tag-bright"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-sk3g7q soui-tag-tag c-30zghb soui-tag-default c-wxv2ml soui-tag-fill"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-wxt23m soui-tag-info c-wxv2ml soui-tag-fill"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag cmrazdf soui-tag-danger c-wxv2ml soui-tag-fill"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-9z96ms soui-tag-warning c-wxv2ml soui-tag-fill"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag cbkq5qr soui-tag-success c-wxv2ml soui-tag-fill"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-sk3g7q soui-tag-tag c-30zghb soui-tag-default co5remq soui-tag-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-wxt23m soui-tag-info co5remq soui-tag-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag cmrazdf soui-tag-danger co5remq soui-tag-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-9z96ms soui-tag-warning co5remq soui-tag-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag cbkq5qr soui-tag-success co5remq soui-tag-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 0px;"
  >
    <div
      class="c-sk3g7q soui-tag-tag c-30zghb soui-tag-default c-5m2miw soui-tag-bright-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-wxt23m soui-tag-info c-5m2miw soui-tag-bright-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag cmrazdf soui-tag-danger c-5m2miw soui-tag-bright-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-9z96ms soui-tag-warning c-5m2miw soui-tag-bright-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag cbkq5qr soui-tag-success c-5m2miw soui-tag-bright-outline"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about size 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="c-sk3g7q soui-tag-tag c-qiyu7d soui-tag-small c-30zghb soui-tag-default cm2h1t6 soui-tag-bright"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Small
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-30zghb soui-tag-default cm2h1t6 soui-tag-bright"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-qn0ppx soui-tag-large c-30zghb soui-tag-default cm2h1t6 soui-tag-bright"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        Large
      </span>
    </div>
  </div>
  <div>
    <div
      class="c-sk3g7q soui-tag-tag c-qiyu7d soui-tag-small c-30zghb soui-tag-default cm2h1t6 soui-tag-bright"
    >
      <div
        class="c-26sp25 soui-tag-wrapper"
      >
        <span
          class="cl0qz2p soui-tag-container"
        >
          Small
        </span>
      </div>
      <div
        class="cjtyskh soui-tag-close-icon"
      >
        <span
          class="c-b6pl1q soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-30zghb soui-tag-default cm2h1t6 soui-tag-bright"
    >
      <div
        class="c-26sp25 soui-tag-wrapper"
      >
        <span
          class="cl0qz2p soui-tag-container"
        >
          Default
        </span>
      </div>
      <div
        class="cjtyskh soui-tag-close-icon"
      >
        <span
          class="c-b6pl1q soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-qn0ppx soui-tag-large c-30zghb soui-tag-default cm2h1t6 soui-tag-bright"
    >
      <div
        class="c-26sp25 soui-tag-wrapper"
      >
        <span
          class="cl0qz2p soui-tag-container"
        >
          Large
        </span>
      </div>
      <div
        class="cjtyskh soui-tag-close-icon"
      >
        <span
          class="c-b6pl1q soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about dynamic 1`] = `
<div>
  <div
    style="display: flex; align-items: center; height: 24px;"
  >
    <div
      class="c-sk3g7q soui-tag-tag c-30zghb soui-tag-default cm2h1t6 soui-tag-bright"
    >
      <div
        class="c-26sp25 soui-tag-wrapper"
      >
        <span
          class="cl0qz2p soui-tag-container"
        >
          Tag 1
        </span>
      </div>
      <div
        class="cjtyskh soui-tag-close-icon"
      >
        <span
          class="c-b6pl1q soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-30zghb soui-tag-default cm2h1t6 soui-tag-bright"
    >
      <div
        class="c-26sp25 soui-tag-wrapper"
      >
        <span
          class="cl0qz2p soui-tag-container"
        >
          Tag 2
        </span>
      </div>
      <div
        class="cjtyskh soui-tag-close-icon"
      >
        <span
          class="c-b6pl1q soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-30zghb soui-tag-default cm2h1t6 soui-tag-bright c-szp3x0 soui-tag-disabled"
    >
      <div
        class="c-26sp25 soui-tag-wrapper"
      >
        <span
          class="cl0qz2p soui-tag-container"
        >
          Tag 3
        </span>
      </div>
      <div
        class="cjtyskh soui-tag-close-icon"
      >
        <span
          class="c-b6pl1q soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c-sk3g7q soui-tag-tag c-30zghb soui-tag-default co5remq soui-tag-outline"
      style="cursor: pointer; border-style: dashed;"
    >
      <span
        class="c-26sp25 soui-tag-wrapper"
      >
        <div
          style="display: flex; align-items: center;"
        >
          <div
            style="color: rgb(102, 108, 124); margin-inline-end: 4px;"
          >
            + 
          </div>
          <div>
            Add Tag
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about input 1`] = `
<div>
  <div
    class="c-sk3g7q soui-tag-tag c-30zghb soui-tag-default cm2h1t6 soui-tag-bright"
  >
    <div
      class="c-26sp25 soui-tag-wrapper"
    >
      <span
        class="cl0qz2p soui-tag-container"
      >
        Abc
      </span>
    </div>
    <div
      class="cjtyskh soui-tag-close-icon"
    >
      <span
        class="c-b6pl1q soui-tag-close-icon-wrapper"
      >
        <svg
          height="10"
          viewBox="0 0 10 10"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Shape] should render correctly about shape 1`] = `
<div>
  <div
    class="c-sk3g7q soui-tag-tag c-30zghb soui-tag-default cm2h1t6 soui-tag-bright"
  >
    <span
      class="c-26sp25 soui-tag-wrapper"
    >
      Default
    </span>
  </div>
  <div
    class="c-sk3g7q soui-tag-tag c-5nukeb soui-tag-rounded c-30zghb soui-tag-default cm2h1t6 soui-tag-bright"
  >
    <span
      class="c-26sp25 soui-tag-wrapper"
    >
      Rounded
    </span>
  </div>
</div>
`;
